k8s/back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back
          image: cf1n92at.gra5.container-registry.ovh.net/private/demo-app-back:latest
          imagePullPolicy: Always
          tty: true
          ports:
            - name: web
              containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: docker-registry-config
