k8s/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: cf1n92at.gra5.container-registry.ovh.net/private/demo-app-front:latest
          imagePullPolicy: Always
          tty: true
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: docker-registry-config
