k8s/back-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - name: web
      port: 80
      targetPort: 8080
  type: ClusterIP
