k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
