k8s/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - name: web
      port: 80
      targetPort: 80
  type: ClusterIP
